# parallel_team_work

./: .gitignore  ALGORITHM_EXPLANATION.md  CLI_REFERENCE.md  CMakeCache.txt  CMakeLists.txt  DEMO_GUIDE.md  GREEDY_VS_OPTIMAL.md  HISTOGRAM_UPGRADE.md  Makefile  PLATFORM_COMPATIBILITY.md  PROJECT_EXTENSIONS.md  QUALITY_ANALYSIS.md  QUICKSTART.md  README.md  RESOLUTION_GUIDE.md  TILE_DATASETS.md  VIDEO_MOSAIC_GUIDE.md  VIDEO_MOSAIC_README.md  WEBCAM_QUICKSTART.md  benchmark.sh  benchmark_tier1.sh  cmake_install.cmake  compare_edge_matching.sh  create_test_image.py  download_pokemon.py  download_pokemon_variants.py  main.cpp  photomosaic  planB.cpp  planC.cpp  planD.cpp  run_histogram_test.sh  settings.ini  settingsB.ini  settingsC.ini  settings_pokemon.ini  test_histogram.py  video_mosaic.cpp  video_mosaic_cpu  video_mosaic_edge.cpp  (+2 more)
config/: settingsB.ini  settingsC.ini
include/: EdgeFeatures.h  TileDatabase.h  VideoMosaicConfig.h  VideoMosaicGenerator.h
report/: report.tex
scripts/: benchmark_edge_v2.sh  build_tile_dataset.py  compare_cpu_implementations.sh  demo_suite.sh  download_cifar10.py  download_pokemon.py  fix_backgrounds.py  run_experiments.py  switch_tiles.sh
src/: video_mosaic.cpp  video_mosaic_edge.cpp  video_mosaic_edge_metal.cpp
src/apps/: video_mosaic_cpu.cpp  video_mosaic_hungarian.cpp  video_mosaic_metal.cpp  video_mosaic_metal.mm
src/apps/legacy/: video_mosaic_edge_metal.cpp  video_mosaic_edge_optimized.cpp  video_mosaic_optimal.cpp
src/common/: TileDatabase.cpp  VideoMosaicGenerator.cpp
src/gpu/: kernels.metal  metal_compute.h  metal_compute.mm
src/legacy/: planB.cpp  planC.cpp  planD.cpp
src/tests/: webcam_test.cpp
